@@ -1,3 +1,12 @@
+2008-09-28  Bradley M. Kuhn  <bkuhn@ebb.org>
+
+	* pokernetwork/pokerpackets.py (PacketPokerPlayerStats.__init__):
+	Renamed statsDict to attrsDict.
+	(PacketPokerSupportedPlayerStats): s/stats/attrs/, changed to Sl
+
+	* pokernetwork/userstats.py
+	(UserStatsRankPercentileLookup.getAttrsAsPacket): Wrote method.
+
 2008-09-27  Bradley M. Kuhn  <bkuhn@ebb.org>
 
 	* tests/test-userstats.py.in
